<resources>
    <string name="app_name">Wish My Trip</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_booking_details">Booking Details</string>
    <string name="menu_order_history">Order History</string>
    <string name="menu_local">Local Guide</string>
    <string name="menu_help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>

    <string name="contact_form">Contact Us</string>
    <string name="contact_form_title">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>

    <string name="about_title">About Us</string>
    <string name="about_content">Welcome to Wish My Trip where our goal is to fulfill your Travel Wishes.  Wish My Trip, Founded in 2014, is one of the Leading Travel agency in USA.  Ami Shah ( owner ) and Bobby Shah ( Travel Consultant ) has over 9 years of selling experience in International and Domestic tickets, Hotels, Cars and Vacation Packages.  Our specialty is in International Airfares from the US to India, Europe, Africa, and the South Pacific (Aus, NZ and Fiji).

We also offer fares inbound from India to US cities and with our new booking engine We will be  offering fares originating from Canada and United Kingdom. We encourage you to use the booking engine as this is  geared to look at last minute availability from multiple Global Distributions Systems . This will give you the best availability and corresponding lowest fares.

We are only a call or email away to provide you travel assistance at any time, no matter where you travel on Earth.  Please browse through our website and feel free to Email us or Call us, we will be happy to answer any questions you may have.

Remember that, "Without a travel agent, you're on your own!" Let Wish My Trip make your Travel Wishes come true!</string>

</resources>
