<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_booking_details"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_booking_details" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_order_history" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_local_guide"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_local" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_help" />
        </menu>
    </item>

</menu>
