<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.wishmytrip.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.wishmytrip.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_booking_details"
        android:name="com.example.wishmytrip.ui.bookingdetails.BookingDetailsFragment"
        android:label="@string/menu_booking_details"
        tools:layout="@layout/fragment_booking_details" />

    <fragment
        android:id="@+id/nav_order_history"
        android:name="com.example.wishmytrip.ui.orderhistory.OrderHistoryFragment"
        android:label="@string/menu_order_history"
        tools:layout="@layout/fragment_order_history" />

    <fragment
        android:id="@+id/nav_local_guide"
        android:name="com.example.wishmytrip.ui.localguide.LocalGuideFragment"
        android:label="@string/menu_local"
        tools:layout="@layout/fragment_local_guide" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.wishmytrip.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_edit"
        android:name="com.example.wishmytrip.EditProfile"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />
</navigation>